# adaptive-state

./: .gitignore  PROJECT_RECORD.md  PROJECT_STATUS.md  README.md  STRUCTURE.md  TODO.md  adaptive_state.md  daniel_v7_training.jsonl  daniel_v8_training.jsonl  daniel_v9_sustained_freedom.jsonl  daniel_v9_training.jsonl  test-results-contextual-rules.md
go-controller/: go.mod  go.sum
go-controller/cmd/bootstrap-graph/: main.go
go-controller/cmd/controller/: main.go
go-controller/cmd/fixture-export/: main.go
go-controller/cmd/inspect/: main.go
go-controller/cmd/replay/: main.go
go-controller/internal/cipher/: cipher.go
go-controller/internal/codec/: client.go  client_test.go
go-controller/internal/eval/: eval.go  eval_test.go  types.go
go-controller/internal/gate/: gate.go  gate_test.go  types.go
go-controller/internal/graph/: graph.go  graph_test.go
go-controller/internal/interior/: store.go
go-controller/internal/logging/: provenance.go  provenance_test.go  types.go
go-controller/internal/orchestrator/: classifier.go  classifier_test.go  evaluator.go  memory.go  (+8 more)
posts/: hackernews.md  linkedin.md  reddit.md
proto/: adaptive.proto
py-inference/: pyproject.toml
py-inference/adaptive_inference/: __init__.py  memory.py  ollama_client.py  server.py  service.py  workspace_server.py
py-inference/adaptive_inference/proto/: adaptive_pb2.py  adaptive_pb2.pyi  adaptive_pb2_grpc.py
py-inference/tests/: test_memory.py  test_service.py
scripts/: gen-proto.sh  run-dev.sh
tools/: cipher.py  cipher_gui.py  gen_tool_training.py  gen_training.py
(+25 files in other folders)
