[project]
name = "adaptive-inference"
version = "0.1.0"
description = "Python inference service for the Adaptive Disposition Layer"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
